--- a/kustomize-installation/kustomization.yaml
+++ b/kustomize-installation/kustomization.yaml
@@ -5,3 +5,6 @@ namespace: argocd
 resources:
 - resources/namespace.yaml
 - github.com/argoproj/argo-cd/manifests/ha/cluster-install?ref=v2.12.0
+
+patchesStrategicMerge:
+  - patches/argocd-cm.yaml
