--- a/kustomize-installation/kustomization.yaml
+++ b/kustomize-installation/kustomization.yaml
@@ -10,3 +10,6 @@ patchesStrategicMerge:
   - patches/argocd-cm.yaml
   - patches/argocd-server-deployment.yaml
   - patches/argocd-repo-server-deployment.yaml
+  - patches/servicemonitor/servicemonitor-argocd-metrics.yaml
+  - patches/servicemonitor/servicemonitor-argocd-repo-server-metrics.yaml
+  - patches/servicemonitor/servicemonitor-argocd-server-metrics.yaml
