--- a/kustomize-installation/kustomization.yaml
+++ b/kustomize-installation/kustomization.yaml
@@ -6,10 +6,10 @@ resources:
 - resources/namespace.yaml
 - github.com/argoproj/argo-cd/manifests/ha/cluster-install?ref=v2.12.0
 
-patchesStrategicMerge:
-  - patches/argocd-cm.yaml
-  - patches/argocd-server-deployment.yaml
-  - patches/argocd-repo-server-deployment.yaml
-  - patches/servicemonitor-argocd-metrics.yaml
-  - patches/servicemonitor-argocd-repo-server-metrics.yaml
-  - patches/servicemonitor-argocd-server-metrics.yaml
+patches:
+- path: patches/argocd-cm.yaml
+- path: patches/argocd-server-deployment.yaml
+- path: patches/argocd-repo-server-deployment.yaml
+- path: patches/servicemonitor-argocd-metrics.yaml
+- path: patches/servicemonitor-argocd-repo-server-metrics.yaml
+- path: patches/servicemonitor-argocd-server-metrics.yaml
