add path to patch

--- a/kustomize-installation/kustomization.yaml
+++ b/kustomize-installation/kustomization.yaml
@@ -13,3 +13,4 @@ patches:
 - path: patches/argocd-cm.yaml
 - path: patches/argocd-server-deployment.yaml
 - path: patches/argocd-repo-server-deployment.yaml
+- path: patches/argocd-rbac-cm.yaml
