--- a/argocd-app.yaml
+++ b/argocd-app.yaml
@@ -6,7 +6,7 @@ spec:
   destination:
     namespace: argocd
     server: https://kubernetes.default.svc
-  project: default
+  project: argocd
   source:
     path: kustomize-installation
     repoURL: https://github.com/kasunsjc/argo-cd-in-practice.git
